using UnityEngine;
using System.Collections;

public class Strings : MonoBehaviour
{

    public const string bannerID = "";
    public const string fullID = "";

    //----------------BLOCK-----------------
    public const string BLOCK_RESOURCE_PATH = "Data/Block";
    public const string BLOCK_SPRITE_PATH = "Block";


    //------------------SCENE-----------------
    public const string SCEN_LOGIN = "Login";
    public const string SCEN_MENU = "MainMenu";
    public const string SCEN_GAMEPLAY = "GamePlay";
    public const string SCEN_MERGEDSCENE = "MergedScene";

	//Avatar, item default
	public const int DEFAULT_AVATAR = 13;
	public const int DEFAULT_ITEM = 5;

    //-------------------DATA-----------------
    public const string DATA_IS_PLAYED = "is_played";
    public const string DATA_GOLD = "secured_data_gold";
    public const string DATA_GEM = "secured_data_gem";
    public const string DATA_USER_NAME = "user_name";
    public const string DATA_CURRENT_AVATAR_ID = "current_avatar";
    public const string DATA_CURRENT_ITEM_ID = "current_item";
    public const string DATA_CURRENT_HIGH_SCORE = "current_high_score";
    public const string DATA_CURRENT_EXP = "current_exp";
    public const string DATA_CURRENT_LEVEL = "current_level";
    public const string DATA_PLAYING_COUNT = "playing_count";
    public const string DATA_PURCHASED_AVATARS = "purchased_avatars";
    public const string DATA_PURCHASED_ITEMS = "purchased_items";
	public const string DATA_LOGGED_FACEBOOK = "logged_facebook";

    //-------------------ANIMATION------------
    public const string ANIM_NORMALBLOCK_EAT = "Eat";
    public const string ANIM_NORMALBLOCK_WEAKUP = "WakeUp";
    public const string ANIM_NORMALBLOCK_WINK = "Wink";
    public const string ANIM_NORMALBLOCK_TONGUE = "Tongue";
    public const string ANIM_NORMALBLOCK_EXCITED = "Excited";

    //-------------------SETTING-----------------
    public const string DATA_BACKGROUND_MUSIC = "background_music";
    public const string DATA_EFFECT = "effect";
    public const string DATA_VIBRATE = "vibrate";
    public const string DATA_NOTIFICATION = "notification";

    //-------------------AVATAR-------------------
    public const int AVATAR_ACE = 1;
    public const int AVATAR_CHOPPER = 2;
    public const int AVATAR_FRANKY = 3;
    public const int AVATAR_KAITO = 4;
    public const int AVATAR_KIMTAN = 5;
    public const int AVATAR_LEN = 6;
    public const int AVATAR_LUFFY = 7;
    public const int AVATAR_LUKA = 8;
    public const int AVATAR_MIKU = 9;
    public const int AVATAR_NAMI = 10;
    public const int AVATAR_RIN = 11;
    public const int AVATAR_ROBIN = 12;
}
